tests/unsafe/fail_nested/fail_nested.snap
---
source: tests/lib.rs
---
exit_code = 101
stdout = ''
stderr = '''
error: function bar directly contains 1 unjustified call to annotated unsafe functions, but is not annotated unsafe
 --> src/main.rs:8:1
  |
8 | fn bar(ptr: *const i32) -> i32 {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: reachable from [main (src/main.rs:15:5) -> *bar*]
note: foo is called here
 --> src/main.rs:9:14
  |
9 |     unsafe { foo(ptr) }
  |              ^^^^^^^^

error: could not compile `fail_nested` (bin "fail_nested") due to 1 previous error
'''
